--- a/LKmaytinh/LKmaytinh.csproj
+++ b/LKmaytinh/LKmaytinh.csproj
@@ -1620,6 +1620,7 @@
     <Content Include="Views\Admin\DonHang.cshtml" />
     <Content Include="Views\Admin\SuaDonHang.cshtml" />
     <Content Include="Views\MayTinh\TimKiem.cshtml" />
+    <Content Include="Views\Admin\SignIn.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
