--- a/LKmaytinh/LKmaytinh.csproj
+++ b/LKmaytinh/LKmaytinh.csproj
@@ -1621,6 +1621,7 @@
     <Content Include="Views\Admin\SuaDonHang.cshtml" />
     <Content Include="Views\MayTinh\TimKiem.cshtml" />
     <Content Include="Views\Admin\SignIn.cshtml" />
+    <Content Include="Views\Admin\_layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
